telegraf-producer/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: telegraf-producer
  labels:
    app: telegraf-producer
spec:
  serviceName: "telegraf-producer"
  selector:
    matchLabels:
      app: "telegraf-producer"
  replicas: 1
  template:
    metadata:
      labels:
        app: telegraf-producer
    spec:
      serviceAccount: telegraf
      containers:
        - name: telegraf-producer
          image: "telegraf:1.12.3-alpine"
          imagePullPolicy: "IfNotPresent"
          resources:
            limits:
              cpu: 1
              memory: 768Mi
            requests:
              cpu: 0.1
              memory: 72Mi
          volumeMounts:
            - name: config
              mountPath: /etc/telegraf
      volumes:
        - name: config
          configMap:
            name: telegraf-producer
