telegraf-producer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-producer-svc
  labels:
    app: telegraf-producer
spec:
  type: ClusterIP
  ports:
    - port: 8186
      targetPort: 8186
      name: "http-listener"
  selector:
    app: telegraf-producer
